changes colors and fixes flexbox items to align center

--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,49 @@
 body {
-    background-color: #fffdfd;
-    box-sizing: border-box;
-    margin-left: 250px;
+    background-color: rgba(245, 245, 195, 0.911);
     max-width: 800px;
+    margin: auto;
+    
 }
 
-.flex-container {
-    display: flex;
-}
-
-.flex-1,
-.flex-2 {
-    background-color: rgb(202, 202, 143);
-    padding: 10px 20px;
-    margin: 20px;
-    border-radius: 30px;
-    min-width: 400px;
-    max-width: 600px;
-}
-
-p {
-    width: 30x 50px;
-    max-width: 800px;
+.title {
+    background-color: black;
+    color: white;
+    padding-left: 4px;
+    padding-bottom: 2px;
+    padding-top: 2px;
 }
 
 img {
     width: 800px;
-    justify-content: center;
+    border-radius: 35px;
+}
+
+
+
+.flexbox-container {
+    display:flex;
+    justify-content: space-around;
+}
+
+.ingredients {
+    background-color: rgba(223, 203, 174, 0.562);
+    border-radius: 35px;
+    margin: 0 10px;
+    padding: 2px 25px 5px 3px;
+    box-sizing: content-box;
+    
+
+}
+
+.square-title {
+    padding-left: 25px;
 }
 
 .steps {
-    max-width: 800px;
+    background-color: rgba(223, 203, 174, 0.562);
+    border-radius: 25px;
+    margin: 10px;
+    padding: 2px 25px 5px 3px;
+    box-sizing: content-box;
+    align-content: center;
 }
